Fixing the underline height tests. Attemt to fix travis ci..

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: swift
 osx_image: xcode10.2
 xcode_project: ScrollableSegmentedControl.xcodeproj
+xcode_scheme: ScrollableSegmentedControl
+xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
